<resources>
    <string name="app_name">GithubExplorer_Android</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello World</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="tab_title_feed">Feed</string>
    <string name="tab_title_search">Search</string>
    <string name="login_title">Github Explorer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_password">password</string>
    <string name="placeholder_username">username</string>
    <string name="button_title_login">Login</string>
    <string name="user_avatar_image">user avatar image</string>
    <string name="label_github_search">Github Search</string>
    <string name="placeholder_search_textfield">search</string>
    <string name="search_results">Search Results</string>
    <string name="star_image_description">star image</string>
    <string name="title_activity_feed">Activity Feed</string>
    <string name="octocat_github_logo">octocat github logo</string>
</resources>
